# home-control

./: .gitignore  Dockerfile  README.md  db-init.sql  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci-build-docker.yml
dashboard/: Cargo.toml
dashboard/config/: actions.yaml
dashboard/src/: actions.rs  http_server.rs  main.rs  mqtt.rs
public/: index.html  load_buttons.js  update_status.js
scripts/sql/: pump_query.sql
src/: actions.ts  config.ts  db.ts  fileimport.ts  http.ts  http_utils.ts  main.js  main.ts  models.ts  mqtt.ts  status.ts
