[package]
name = "dashboard"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.5"
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.20"
serde_json = "1.0.67"
paho-mqtt = "0.9.1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde_derive = "1.0.130"
